--- a/templates/Explore.html
+++ b/templates/Explore.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="/static/css/explore.css">
+</head>
 <body>
     <div class="container">
         <div class="recipe-header">
