I tried to make the signup page data from Method go from there to welcome  but its not working I will fix it after classes. I also added new imports there for session which is used to take the data from there to in welcome. Later Chandani will add the profile page data as well and Ill work with it accordingly.

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -41,6 +41,8 @@
 
 
 <!-- TEMPORARAY INTERFACE -->
+
+<h1>Welcome {{ name }}</h1>
     <div class="container">
         <!-- Form Section (EXAMPLE)-->
         <section class="form-section">
