--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
 
+
+  <!-- css for login thats linked externally -->
   <link rel="stylesheet" href="/static/css/login.css">
 
 </head>
